# fraud

./: CMakeLists.txt  README.md  composite.hpp  concepts.hpp  fraud.cpp  fraud.hpp  orbit.hpp
fraud.test/: accumulate.cpp  arithmetic_mean.cpp  correlation_coefficient.cpp  mean.cpp  standard_deviation.cpp  strongest_correlation.cpp  sum.cpp  test.hpp  variance.cpp
